--- a/.github/workflows/arduino.yml
+++ b/.github/workflows/arduino.yml
@@ -20,6 +20,7 @@ jobs:
         arduino-cli config init
         arduino-cli config set library.enable_unsafe_install true
         arduino-cli lib install -v ArduinoJson
+        arduino-cli lib install -v WiFiManager
         arduino-cli lib install -v --git-url https://github.com/axcap/Esp-GitHub-OTA.git
 
     - name: Compile Sketch
