--- a/platformio.ini
+++ b/platformio.ini
@@ -7,4 +7,6 @@ platform = espressif32
 monitor_speed = 115200
 upload_speed = 460800
 board = nodemcu-32s
-lib_deps = axcap/Esp-GitHub-OTA@0.0.7
+lib_deps = 
+    tzapu/WiFiManager@0.16.0
+    axcap/Esp-GitHub-OTA@0.0.7
