--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@ platform = espressif32
 monitor_speed = 115200
 upload_speed = 460800
 board = nodemcu-32s
+build_flags = -D ESP32
 lib_deps = 
     tzapu/WiFiManager@0.16.0
     axcap/Esp-GitHub-OTA@0.0.7
