--- a/platformio.ini
+++ b/platformio.ini
@@ -9,5 +9,5 @@ upload_speed = 460800
 board = nodemcu-32s
 build_flags = -D ESP32
 lib_deps = 
-    tzapu/WiFiManager@0.16.0
+    tzapu-WiFiManager=https://github.com/tzapu/WiFiManager/archive/refs/heads/master.zip
     axcap/Esp-GitHub-OTA@0.0.7
